--- a/Vebsite/index.html
+++ b/Vebsite/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+2<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -68,32 +68,31 @@
 
     <!-- home section starts -->
 
-    <!-- top icons -->
-    
-    <div class="container" id="top-icons">
-      <div class="row">
-        <div class="col-md-3 py-3 py-md-0">
-          <i class="glow">
-            <img src="assets/img/Menu.jpg" alt="Menu" title="Menu">
-            <p class="img-caption">Menu</p>
-          </i>
-        </div>
-        <div class="col-md-3 py-3 py-md-0">
-          <i class="glow">
-            <img src="assets/img/Delivery.webp" alt="Delivery" title="Delivery">
-            <p class="img-caption">Delivery</p>
-          </i>
-        </div>
-        <div class="col-md-3 py-3 py-md-0">
-          <i class="glow">
-            <img src="assets/img/Contact.jpg" alt="Contact" title="Contact">
-            <p class="img-caption">Contact</p>
-          </i>
-        </div>
+
+      <!-- top icons -->
+  <div class="container" id="top-icons">
+    <h1>Təklif edirik</h1>
+    <div class="row">
+      <div class="col-md-3 py-3 py-md-0">
+        <i><img src="assets/img/Menu.jpg" alt=""></i>
+        <h3>Menu</h3>
+      </div>
+      <div class="col-md-3 py-3 py-md-0">
+        <i><img src="assets/img/Delivery.webp" alt=""></i>
+        <h3>Pulsuz Çatdırılma</h3>
+      </div>
+      <div class="col-md-3 py-3 py-md-0">
+        <i><img src="assets/img/Service.jpg" alt=""></i>
+        <h3>Burger free fries</h3>
+      </div>
+      <div class="col-md-3 py-3 py-md-0">
+        <i><img src="assets/img/Contact.jpg" alt=""></i>
+        <h3>Bizimlə Əlaqə</h3>
       </div>
     </div>
-     
-    <!-- top icons -->
+  </div>
+  <!-- top icons -->
+
 
 
     <!-- About Us -->
@@ -174,7 +173,7 @@
           <div class="card mb-3 col-md-6" id="breakfast" style="max-width: 660px;">
               <div class="row g-0">
                   <div class="col-md-4 col-sm-12">
-                      <img src="assets/img/item-1.jpeg" class="img-fluid rounded-start border border-warning border-2" alt="...">
+                      <img src="assets/img/item-1.jpeg" class="img-fluid rounded-start  border-2" alt="...">
                   </div>
                   <div class="col-md-8">
                       <div class="card-body">
@@ -191,7 +190,7 @@
           <div class="card mb-3 col-md-6" id="dinner" style="max-width: 660px;">
               <div class="row g-0">
                   <div class="col-md-4">
-                      <img src="assets/img/item-2.jpeg" class="img-fluid rounded-start border border-warning border-2" alt="...">
+                      <img src="assets/img/item-2.jpeg" class="img-fluid rounded-start   border-2" alt="...">
                   </div>
                   <div class="col-md-8">
                       <div class="card-body">
@@ -208,7 +207,7 @@
           <div class="card mb-3 col-md-6" id="shakes" style="max-width: 660px;">
               <div class="row g-0">
                   <div class="col-md-4">
-                      <img src="assets/img/item-3.jpeg" class="img-fluid rounded-start border border-warning border-2" alt="...">
+                      <img src="assets/img/item-3.jpeg" class="img-fluid rounded-start  border-2" alt="...">
                   </div>
                   <div class="col-md-8">
                       <div class="card-body">
@@ -225,7 +224,7 @@
           <div class="card mb-3 col-md-6" id="breakfast" style="max-width: 660px;">
               <div class="row g-0">
                   <div class="col-md-4">
-                      <img src="assets/img/item-4.jpeg" class="img-fluid rounded-start border border-warning border-2" alt="...">
+                      <img src="assets/img/item-4.jpeg" class="img-fluid rounded-start  border-2" alt="...">
                   </div>
                   <div class="col-md-8">
                       <div class="card-body">
@@ -242,7 +241,7 @@
           <div class="card mb-3 col-md-6" id="lunch" style="max-width: 660px;">
               <div class="row g-0">
                   <div class="col-md-4">
-                      <img src="assets/img/item-5.jpeg" class="img-fluid rounded-start border border-warning border-2" alt="...">
+                      <img src="assets/img/item-5.jpeg" class="img-fluid rounded-start  border-2" alt="...">
                   </div>
                   <div class="col-md-8">
                       <div class="card-body">
@@ -259,7 +258,7 @@
           <div class="card mb-3 col-md-6" id="shakes" style="max-width: 660px;">
               <div class="row g-0">
                   <div class="col-md-4">
-                      <img src="assets/img/item-6.jpeg" class="img-fluid rounded-start border border-warning border-2" alt="...">
+                      <img src="assets/img/item-6.jpeg" class="img-fluid rounded-start border-2" alt="...">
                   </div>
                   <div class="col-md-8">
                       <div class="card-body">
@@ -276,7 +275,7 @@
           <div class="card mb-3 col-md-6" id="breakfast" style="max-width: 660px;">
               <div class="row g-0">
                   <div class="col-md-4">
-                      <img src="assets/img/item-7.jpeg" class="img-fluid rounded-start border border-warning border-2" alt="...">
+                      <img src="assets/img/item-7.jpeg" class="img-fluid rounded-start  border-2" alt="...">
                   </div>
                   <div class="col-md-8">
                       <div class="card-body">
@@ -293,7 +292,7 @@
           <div class="card mb-3 col-md-6" id="lunch" style="max-width: 660px;">
               <div class="row g-0">
                   <div class="col-md-4">
-                      <img src="assets/img/item-8.jpeg" class="img-fluid rounded-start border border-warning border-2" alt="...">
+                      <img src="assets/img/item-8.jpeg" class="img-fluid rounded-start g border-2" alt="...">
                   </div>
                   <div class="col-md-8">
                       <div class="card-body">
@@ -310,7 +309,7 @@
           <div class="card mb-3 col-md-6" id="shakes" style="max-width: 660px;">
               <div class="row g-0">
                   <div class="col-md-4">
-                      <img src="assets/img/item-9.jpeg" class="img-fluid rounded-start border border-warning border-2" alt="...">
+                      <img src="assets/img/item-9.jpeg" class="img-fluid rounded-start  border-2" alt="...">
                   </div>
                   <div class="col-md-8">
                       <div class="card-body">
@@ -327,7 +326,7 @@
           <div class="card mb-3 col-md-6" id="dinner" style="max-width: 660px;">
               <div class="row g-0">
                   <div class="col-md-4">
-                      <img src="assets/img/item-10.jpeg" class="img-fluid rounded-start border border-warning border-2" alt="...">
+                      <img src="assets/img/item-10.jpeg" class="img-fluid rounded-start  border-2" alt="...">
                   </div>
                   <div class="col-md-8">
                       <div class="card-body">
@@ -343,6 +342,48 @@
           </div>
       </div>
   </div>
+
+
+  <!-- Footer -->
+  <footer>
+    <div class="footer-col">
+      <h3>Top Products</h3>
+      <li>Manage Reputation</li>
+      <li>Power Tools</li>
+      <li>Managed Website</li>
+      <li>Marketing Service</li>
+    </div>
+    <div class="footer-col">
+      <h3>Quick Links</h3>
+      <li>Jobs</li>
+      <li>Brand Assets</li>
+      <li>Inversor Realtion</li>
+      <li>Term of Service</li>
+    </div>
+    <div class="footer-col">
+      <h3>Features</h3>
+      <li>Manage Reputation</li>
+      <li>Power Tools</li>
+      <li>Managed Website</li>
+      <li>Marketing Service</li>
+    </div>
+    <div class="footer-col">
+      <h3>Resources</h3>
+      <li>Guides</li>
+      <li>Research</li>
+      <li>Experts</li>
+      <li>Marketing Service</li>
+    </div>
+
+    <div class="footer-col">
+      <h3>Newsletter</h3>
+      <p>You can trust us. we only send promo offers,</p>
+      <div class="subscribe">
+        <input type="text" placeholder="Your Email address" />
+        <a href="#" class="yellow">SUBSCRIBE</a>
+      </div>
+    </div>
+  </footer>
 
     <!-- custom js file link -->
 <script src="assets/Js/script.js"></script>
