--- a/Vebsite/index.html
+++ b/Vebsite/index.html
@@ -30,8 +30,8 @@
         </a>
 
         <nav class="navbar">
-          <a href="#home">Ana Səhifə</a>
-          <a href="#home">Haqqımızda</a>
+          <a href="index.html">Ana Səhifə</a>
+          <a href="about.html">Haqqımızda</a>
           <a href="#home">Menyu</a>
           <a href="#home">product</a>
           <a href="#home">review</a>
@@ -69,8 +69,9 @@
     <!-- home section starts -->
 
 
-      <!-- top icons -->
-  <div class="container" id="top-icons">
+    <!-- top icons -->
+
+    <div class="container" id="top-icons">
     <h1>Təklif edirik</h1>
     <div class="row">
       <div class="col-md-3 py-3 py-md-0">
@@ -90,9 +91,9 @@
         <h3>Bizimlə Əlaqə</h3>
       </div>
     </div>
-  </div>
-  <!-- top icons -->
+    </div>
 
+    <!-- top icons -->
 
 
     <!-- About Us -->
@@ -129,6 +130,7 @@
       </div>
     </section>
 
+    <!-- Counter -->
     <div class="counter-wrapper">
       <div class="counter">
           <h1 class="count" data-target="30">0</h1>
@@ -341,7 +343,7 @@
               </div>
           </div>
       </div>
-  </div>
+    </div>
 
 
   <!-- Footer -->
