--- a/Vebsite/about.html
+++ b/Vebsite/about.html
@@ -32,7 +32,7 @@
             <nav class="navbar">
               <a href="index.html">Ana Səhifə</a>
               <a href="about.html">Haqqımızda</a>
-              <a href="#home">Menyu</a>
+              <a href="menu.html">Menyu</a>
               <a href="#home">product</a>
               <a href="#home">review</a>
               <a href="#home">Əlaqə</a>
