--- a/Vebsite/contact.html
+++ b/Vebsite/contact.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     
-    <!-- headedr section starts -->
+<!-- headedr section starts -->
 
    <header class="header">
 
@@ -29,10 +29,7 @@
       <a href="index.html">Ana Səhifə</a>
       <a href="about.html">Haqqımızda</a>
       <a href="menu.html">Menyu</a>
-      <a href="#home">product</a>
-      <a href="#home">review</a>
       <a href="contact.html">Əlaqə</a>
-      <a href="#home">blogs</a>
     </nav>
 
     <div class="icons">
@@ -50,6 +47,101 @@
    </header>
 
 <!-- headedr section end -->
+
+<!-- Rezervasiya -->
+<div class="main_bg">
+    <div class="form">
+        <div class="form-text">
+            <h1><span><img src="assets/img/art-1.png" alt=""></span>Rezervasiya <span><img src="assets/img/art-1.png" alt=""></span></h1>
+        <div class="main-form">
+            <form action="#" method="get">
+                <div>
+                    <span>Ad/Soyad</span>
+                    <input type="text" name="name" id="name" placeholder="Write your name here..." required>
+                </div>
+                <div>
+                    <span>Email Ünvanınız</span>
+                    <input type="email" name="name" id="name" placeholder="Write your email here..." required> 
+                </div>
+                <div>
+                    <!-- <---this is the select option--->
+                    <span>Neçə nəfərlik</span>
+                    <select name="people" id="people" required>
+                        <option value=""><---İnsan---></option>
+                        <option value="1">1 Nəfər</option>
+                        <option value="2">2 Nəfər</option>
+                        <option value="3">3 Nəfər</option>
+                        <option value="4">4 Nəfər</option>
+                    </select>
+                    <!-- <---this is the select option--->
+                </div>
+                <div>
+                    <span>Saat</span>
+                    <input type="text" name="time" id="time" placeholder="Time" required>
+                </div>
+                <div>
+                    <span>Gün</span>
+                    <input type="date" name="date" id="date" placeholder="date" required>
+                </div>
+                <div>
+                    <span>Mobil Nömrəniz</span>
+                    <input type="number" name="number" id="number" placeholder="Write your number here..." required>
+                </div>
+                <div id="submit">
+                    <input type="submit" value="Göndər" id="submit">
+                </div>
+
+
+            </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Footer -->
+<footer>
+    <div class="footer-col">
+      <h3>Top Products</h3>
+      <li>Manage Reputation</li>
+      <li>Power Tools</li>
+      <li>Managed Website</li>
+      <li>Marketing Service</li>
+    </div>
+    <div class="footer-col">
+      <h3>Quick Links</h3>
+      <li>Jobs</li>
+      <li>Brand Assets</li>
+      <li>Inversor Realtion</li>
+      <li>Term of Service</li>
+    </div>
+    <div class="footer-col">
+      <h3>Features</h3>
+      <li>Manage Reputation</li>
+      <li>Power Tools</li>
+      <li>Managed Website</li>
+      <li>Marketing Service</li>
+    </div>
+    <div class="footer-col">
+      <h3>Resources</h3>
+      <li>Guides</li>
+      <li>Research</li>
+      <li>Experts</li>
+      <li>Marketing Service</li>
+    </div>
+
+    <div class="footer-col">
+      <h3>Newsletter</h3>
+      <p>You can trust us. we only send promo offers,</p>
+      <div class="subscribe">
+        <input type="text" placeholder="Your Email address" />
+        <a href="#" class="yellow">SUBSCRIBE</a>
+      </div>
+    </div>
+</footer>
+
+
+<script src="assets/Js/script.js"></script>
 
 </body>
 </html>
