--- a/Vebsite/about.html
+++ b/Vebsite/about.html
@@ -33,10 +33,7 @@
               <a href="index.html">Ana Səhifə</a>
               <a href="about.html">Haqqımızda</a>
               <a href="menu.html">Menyu</a>
-              <a href="#home">product</a>
-              <a href="#home">review</a>
-              <a href="#home">Əlaqə</a>
-              <a href="#home">blogs</a>
+              <a href="contact.html">Əlaqə</a>
             </nav>
     
             <div class="icons">
