--- a/Vebsite/menu.html
+++ b/Vebsite/menu.html
@@ -29,10 +29,7 @@
       <a href="index.html">Ana Səhifə</a>
       <a href="about.html">Haqqımızda</a>
       <a href="menu.html">Menyu</a>
-      <a href="#home">product</a>
-      <a href="#home">review</a>
       <a href="contact.html">Əlaqə</a>
-      <a href="#home">blogs</a>
     </nav>
 
     <div class="icons">
@@ -63,7 +60,7 @@
         <div class="card mb-3 col-md-6" id="breakfast" style="max-width: 660px;">
             <div class="row g-0">
                 <div class="col-md-4 col-sm-12">
-                    <img src="assets/img/item-1.jpeg" class="img-fluid rounded-start  border-2" alt="...">
+                    <img src="assets/img/Menu-1.png" class="img-fluid rounded-start  border-2" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -80,7 +77,7 @@
         <div class="card mb-3 col-md-6" id="dinner" style="max-width: 660px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="assets/img/item-2.jpeg" class="img-fluid rounded-start   border-2" alt="...">
+                    <img src="assets/img/Menu-2.png" class="img-fluid rounded-start   border-2" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -97,7 +94,7 @@
         <div class="card mb-3 col-md-6" id="dinner" style="max-width: 660px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="assets/img/item-2.jpeg" class="img-fluid rounded-start   border-2" alt="...">
+                    <img src="assets/img/Menu-3.png" class="img-fluid rounded-start   border-2" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -114,7 +111,7 @@
         <div class="card mb-3 col-md-6" id="dinner" style="max-width: 660px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="assets/img/item-2.jpeg" class="img-fluid rounded-start   border-2" alt="...">
+                    <img src="assets/img/Menu-4.png" class="img-fluid rounded-start   border-2" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -131,7 +128,7 @@
         <div class="card mb-3 col-md-6" id="dinner" style="max-width: 660px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="assets/img/item-2.jpeg" class="img-fluid rounded-start   border-2" alt="...">
+                    <img src="assets/img/Menu-5.png" class="img-fluid rounded-start   border-2" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -148,7 +145,8 @@
         <div class="card mb-3 col-md-6" id="dinner" style="max-width: 660px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="assets/img/item-2.jpeg" class="img-fluid rounded-start   border-2" alt="...">
+                    <img src="assets/img/Menu-6.png
+                    " class="img-fluid rounded-start   border-2" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -165,7 +163,7 @@
         <div class="card mb-3 col-md-6" id="dinner" style="max-width: 660px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="assets/img/item-2.jpeg" class="img-fluid rounded-start   border-2" alt="...">
+                    <img src="assets/img/Menu-7.png" class="img-fluid rounded-start   border-2" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -182,7 +180,7 @@
         <div class="card mb-3 col-md-6" id="dinner" style="max-width: 660px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="assets/img/item-2.jpeg" class="img-fluid rounded-start   border-2" alt="...">
+                    <img src="assets/img/Menu-8.png" class="img-fluid rounded-start   border-2" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -199,7 +197,7 @@
         <div class="card mb-3 col-md-6" id="dinner" style="max-width: 660px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="assets/img/item-2.jpeg" class="img-fluid rounded-start   border-2" alt="...">
+                    <img src="assets/img/Menu-9.png" class="img-fluid rounded-start   border-2" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -216,7 +214,7 @@
         <div class="card mb-3 col-md-6" id="dinner" style="max-width: 660px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="assets/img/item-2.jpeg" class="img-fluid rounded-start   border-2" alt="...">
+                    <img src="assets/img/Menu-10.png" class="img-fluid rounded-start   border-2" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -233,7 +231,7 @@
         <div class="card mb-3 col-md-6" id="shakes" style="max-width: 660px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="assets/img/item-3.jpeg" class="img-fluid rounded-start  border-2" alt="...">
+                    <img src="assets/img/Menu-11.png" class="img-fluid rounded-start  border-2" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -250,7 +248,7 @@
         <div class="card mb-3 col-md-6" id="breakfast" style="max-width: 660px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="assets/img/item-4.jpeg" class="img-fluid rounded-start  border-2" alt="...">
+                    <img src="assets/img/Menu-12.png" class="img-fluid rounded-start  border-2" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -267,7 +265,7 @@
         <div class="card mb-3 col-md-6" id="lunch" style="max-width: 660px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="assets/img/item-5.jpeg" class="img-fluid rounded-start  border-2" alt="...">
+                    <img src="assets/img/Menu-13.png" class="img-fluid rounded-start  border-2" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -284,7 +282,7 @@
         <div class="card mb-3 col-md-6" id="shakes" style="max-width: 660px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="assets/img/item-6.jpeg" class="img-fluid rounded-start border-2" alt="...">
+                    <img src="assets/img/Menu-14.png" class="img-fluid rounded-start border-2" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -301,7 +299,7 @@
         <div class="card mb-3 col-md-6" id="breakfast" style="max-width: 660px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="assets/img/item-7.jpeg" class="img-fluid rounded-start  border-2" alt="...">
+                    <img src="assets/img/Menu-15.png" class="img-fluid rounded-start  border-2" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -318,7 +316,7 @@
         <div class="card mb-3 col-md-6" id="lunch" style="max-width: 660px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="assets/img/item-8.jpeg" class="img-fluid rounded-start g border-2" alt="...">
+                    <img src="assets/img/Menu-16.png" class="img-fluid rounded-start g border-2" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -335,7 +333,7 @@
         <div class="card mb-3 col-md-6" id="shakes" style="max-width: 660px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="assets/img/item-9.jpeg" class="img-fluid rounded-start  border-2" alt="...">
+                    <img src="assets/img/Menu-17.png" class="img-fluid rounded-start  border-2" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -352,7 +350,7 @@
         <div class="card mb-3 col-md-6" id="dinner" style="max-width: 660px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="assets/img/item-10.jpeg" class="img-fluid rounded-start  border-2" alt="...">
+                    <img src="assets/img/Menu-18.png" class="img-fluid rounded-start  border-2" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
