--- a/Vebsite/contact.html
+++ b/Vebsite/contact.html
@@ -26,22 +26,15 @@
     </a>
 
     <nav class="navbar">
-      <a href="index.html">Ana Səhifə</a>
-      <a href="about.html">Haqqımızda</a>
-      <a href="menu.html">Menyu</a>
-      <a href="contact.html">Əlaqə</a>
-    </nav>
+        <a href="index.html">Ana Səhifə</a>
+        <a href="about.html">Haqqımızda</a>
+        <a href="menu.html">Menyu</a>
+        <a href="gallery.html">Qalareya</a>
+        <a href="contact.html">Əlaqə</a>
+      </nav>
 
     <div class="icons">
-        <div class="fas fa-search" id="search-btn"></div>
         <div class="fas fa-bars" id="menu-btn"></div>
-    </div>
-
-    <!-- Search Section -->
-
-    <div class="search-form">
-        <input type="search" id="search-box" placeholder="search here...">
-        <label for="search-box" class="fas fa-search"></label>
     </div>
 
    </header>
