--- a/Vebsite/menu.html
+++ b/Vebsite/menu.html
@@ -26,11 +26,12 @@
     </a>
 
     <nav class="navbar">
-      <a href="index.html">Ana Səhifə</a>
-      <a href="about.html">Haqqımızda</a>
-      <a href="menu.html">Menyu</a>
-      <a href="contact.html">Əlaqə</a>
-    </nav>
+        <a href="index.html">Ana Səhifə</a>
+        <a href="about.html">Haqqımızda</a>
+        <a href="menu.html">Menyu</a>
+        <a href="gallery.html">Qalareya</a>
+        <a href="contact.html">Əlaqə</a>
+      </nav>
 
     <div class="icons">
         <div class="fas fa-search" id="search-btn"></div>
